Manage views [aaf,aai,appc] in JJB
Use lf-views to manage views through JJB

Change-Id: Ie6dfe6a9dca587ae133927bfabe9a9ed8ec2e289
Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-authz.yaml
+++ b/jjb/aaf/aaf-authz.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aaf-project-view
+    project-name: aaf
+    views:
+      - project-view
+
+- project:
     name: aaf-authz
     project-name: 'aaf-authz'
     jobs:
