--- a/jjb/aai/aai-chameleon.yaml
+++ b/jjb/aai/aai-chameleon.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-chameleon-project-view
+    project-name: aai-chameleon
+    views:
+      - project-view
+
+- project:
     name: aai-chameleon
     project-name: 'aai-chameleon'
     jobs:
