--- a/jjb/aai/aai-event-client.yaml
+++ b/jjb/aai/aai-event-client.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-event-client-project-view
+    project-name: aai-event-client
+    views:
+      - project-view
+
+- project:
     name: aai-event-client-master
     project-name: 'aai-event-client'
     jobs:
