--- a/jjb/aai/aai-resources.yaml
+++ b/jjb/aai/aai-resources.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-resources-project-view
+    project-name: aai-resources
+    views:
+      - project-view
+
+- project:
     name: aai-resources
     project-name: 'aai-resources'
     jobs:
