--- a/jjb/aai/aai-logging-service.yaml
+++ b/jjb/aai/aai-logging-service.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-logging-service-project-view
+    project-name: aai-logging-service
+    views:
+      - project-view
+
+- project:
     name: aai-logging-service-master
     project-name: 'aai-logging-service'
     jobs:
