--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-sparky-project-view
+    project-name: aai-sparky
+    views:
+      - project-view
+
+- project:
     name: aai-sparky-be-master
     project-name: 'aai-sparky-be'
     jobs:
