Manage views [c*-i*] in JJB
Use lf-views to manage views through JJB

Change-Id: I377e257f4ca54c9e408146e4efa5f1dabbec8351
Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: ccsdk-project-view
+    project-name: ccsdk
+    views:
+      - project-view
+
+- project:
     name: ccsdk-apps
     project-name: 'ccsdk-apps'
     jobs:
