Manage views [l*-p*] in JJB
Use lf-views to manage views through JJB

Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: If154d6a488998346cefe4a39927a6cb5379c08b0

--- a/jjb/logging-analytics/logging-analytics.yaml
+++ b/jjb/logging-analytics/logging-analytics.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: logging-analytics-project-view
+    project-name: logging-analytics
+    views:
+      - project-view
+
+- project:
     name: logging-analytics
     project-name: 'logging-analytics'
     jobs:
