--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -1,4 +1,9 @@
 ---
+- project:
+    name: modeling-project-view
+    project-name: modeling
+    views:
+      - project-view
 
 - project:
     name: modeling-toscaparsers-javatoscachecker
