--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: portal-project-view
+    project-name: portal
+    views:
+      - project-view
+
+- project:
     name: portal
     project-name: 'portal'
     jobs:
