Manage views [s*] in JJB
Use lf-views to manage views through JJB

Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I0c313c9c7640d3333e12f8d74e013aa8d9ec4d87

--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: sdc-dcae-d-project-view
+    project-name: sdc-dcae-d
+    views:
+      - project-view
+
+- project:
     name: sdc-dcae-d-ci
     project-name: 'sdc-dcae-d-ci'
     jobs:
