--- a/jjb/sdc/sdc-sdc-titan-cassandra.yaml
+++ b/jjb/sdc/sdc-sdc-titan-cassandra.yaml
@@ -1,4 +1,9 @@
 ---
+- project:
+    name: sdc-sdc-titan-project-view
+    project-name: sdc-sdc-titan
+    views:
+      - project-view
 
 - project:
     name: sdc-sdc-titan-cassandra
