Manage views [s*] in JJB
Use lf-views to manage views through JJB

Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I0c313c9c7640d3333e12f8d74e013aa8d9ec4d87

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -1,4 +1,9 @@
 ---
+- project:
+    name: sdc-master-project-view
+    project-name: sdc-master
+    views:
+      - project-view
 
 - project:
     name: sdc
