Manage views [t*-v*] in JJB
Use lf-views to manage views through JJB

Issue-ID: CIMAN-218
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I1297f26739606105288f65aac5919d9b57ef8051

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: testsuite-project-view
+    project-name: testsuite
+    views:
+      - project-view
+
+- project:
     name: testsuite
     project-name: 'testsuite'
     jobs:
