--- a/jjb/vnfrqts/vnfrqts-epics.yaml
+++ b/jjb/vnfrqts/vnfrqts-epics.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: vnfrqts-project-view
+    project-name: vnfrqts
+    views:
+      - project-view
+
+- project:
     name: vnfrqts-epics
     project: 'vnfrqts/epics'
     jobs:
