Update for Cassandra Branch
Change-Id: Ia158bb01b8d3f48dde1099721306e83f45ccce31
Issue-ID: MUSIC-187
Signed-off-by: Nelson,Thomas(tn1381)(arthurdent3) <tn1381@att.com>

--- a/jjb/music/music-jar.yaml
+++ b/jjb/music/music-jar.yaml
@@ -13,8 +13,8 @@
     stream:
       - 'jar-master':
           branch: 'master'
-      - 'jar-beijing':
-          branch: 'beijing'
+      - 'jar-casablanca':
+          branch: 'casablanca'
       - 'jar-release-2.5.5':
           branch: 'release-2.5.5'
     mvn-settings: 'music-settings'
