--- a/jjb/sdc/sdc-sdc-workflow-designer.yaml
+++ b/jjb/sdc/sdc-sdc-workflow-designer.yaml
@@ -18,6 +18,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-sdc-workflow-designer-settings'
     files: '**'
     archive-artifacts: ''
@@ -34,7 +36,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'sdc/sdc-workflow-designer'
     project-name: 'sdc-sdc-workflow-designer'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-sdc-workflow-designer-settings'
     mvn-params: '-Djacoco.skip=false -Dsonar.branch={branch}'
     mvn-goals: 'clean install'
@@ -47,5 +49,5 @@
     project: sdc/sdc-workflow-designer
     project-name: 'sdc-sdc-workflow-designer'
     build-node: ubuntu1604-builder-4c-4g
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-sdc-workflow-designer-settings'
