--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -43,6 +43,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
@@ -57,7 +59,7 @@
     build-node: ubuntu1604-builder-8c-8g
     project: 'sdc'
     project-name: 'sdc'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-settings'
     mvn-params: '-Djacoco.skip=false -Dsonar.branch={branch} -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
     mvn-goals: 'clean install'
@@ -73,5 +75,5 @@
     project: sdc
     project-name: 'sdc'
     build-node: ubuntu1604-docker-8c-8g
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-settings'
