--- a/jjb/aai/aai-resources.yaml
+++ b/jjb/aai/aai-resources.yaml
@@ -29,6 +29,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-resources-arm64
+    project-name: 'aai-resources-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          docker-pom: 'aai-resources/pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'aai/resources'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-resources-settings'
+    mvn-version: 'mvn35'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: aai-resources-sonar
     jobs:
       - gerrit-maven-sonar
