--- a/jjb/aai/aai-data-router.yaml
+++ b/jjb/aai/aai-data-router.yaml
@@ -26,6 +26,23 @@
     archive-artifacts: ''
 
 - project:
+    name: aai-data-router-arm64-master
+    project-name: 'aai-data-router-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+    project: 'aai/data-router'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-data-router-settings'
+    files: '**'
+    archive-artifacts: ''
+
+ project:
     name: aai-data-router-sonar
     jobs:
       - gerrit-maven-sonar
