--- a/jjb/aai/aai-esr-gui.yaml
+++ b/jjb/aai/aai-esr-gui.yaml
@@ -27,6 +27,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-esr-gui-arm64
+    project-name: 'aai-esr-gui-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+
+    project: 'aai/esr-gui'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-esr-gui-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+ project:
     name: aai-esr-gui-clm
     jobs:
       - gerrit-maven-clm
