--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -26,6 +26,21 @@
     archive-artifacts: ''
 
 - project:
+    name: aai-search-data-service-arm64-master
+    project-name: 'aai-search-data-service-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+    project: 'aai/search-data-service'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-search-data-service-settings'
+    files: '**'
+    archive-artifacts: ''
+
+- project:
     name: aai-search-data-service-sonar
     jobs:
       - gerrit-maven-sonar
