--- a/jjb/aai/aai-spike.yaml
+++ b/jjb/aai/aai-spike.yaml
@@ -27,6 +27,22 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-spike-arm64
+    project-name: 'aai-spike-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+    project: 'aai/spike'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-spike-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: aai-spike-sonar
     jobs:
       - gerrit-maven-sonar
