--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -27,6 +27,22 @@
     archive-artifacts: ''
 
 - project:
+    name: aai-sparky-be-arm64-master
+    project-name: 'aai-sparky-be-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'sparkybe-onap-application/pom.xml'
+          mvn-goals: 'docker:build'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    project: 'aai/sparky-be'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-sparky-be-settings'
+    files: '**'
+    archive-artifacts: ''
+
+- project:
     name: aai-sparky-be-sonar
     jobs:
       - gerrit-maven-sonar
