Add arm64 docker build for AAI
Add arm64 docker-build job for aai project

Change-Id: I416d7425bfd0451957eafb90e4705c39455370b4
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/aai/aai-chameleon.yaml
+++ b/jjb/aai/aai-chameleon.yaml
@@ -28,6 +28,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-chameleon-arm64
+    project-name: 'aai-chameleon-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'clean package dockerfile:build dockerfile:push'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+    project: 'aai/chameleon'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-chameleon-settings'
+    files: '**'
+    archive-artifacts: ''
+
+- project:
     name: aai-chameleon-clm
     jobs:
       - gerrit-maven-clm
