--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -28,6 +28,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-babel-arm64
+    project-name: 'aai-babel-arm64'
+    jobs:
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+    project: 'aai/babel'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-babel-settings'
+    files: '**'
+    archive-artifacts: ''
+
+- project:
     name: aai-babel-sonar
     jobs:
       - gerrit-maven-sonar
