--- a/jjb/aai/aai-esr-server.yaml
+++ b/jjb/aai/aai-esr-server.yaml
@@ -29,6 +29,23 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: aai-esr-server-arm64-master
+    project-name: 'aai-esr-server-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+    project: 'aai/esr-server'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'aai-esr-server-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+
+- project:
     name: aai-esr-server-sonar
     jobs:
       - gerrit-maven-sonar
