Add arm64 docker build for ccsdk
Add arm64 docker-build job for ccsdk project

Change-Id: Ie1099708723b8cc78ab13bfe483b36271af7e261
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -39,6 +39,23 @@
     build-node: queue-docker-4c-4g
 
 - project:
+    name: ccsdk-distribution-arm64-docker
+    project-name: 'ccsdk-distribution-arm64'
+    jobs:
+      - 'docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'ccsdk/distribution'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'ccsdk-distribution-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: ccsdk-distribution-clm
     jobs:
       - gerrit-maven-clm
