--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -71,3 +71,20 @@
     docker-pom: 'pom.xml'
     mvn-profile: docker
     build-node: queue-docker-4c-4g
+
+- project:
+    name: ccsdk-apps-arm64-docker
+    project-name: 'ccsdk-apps-arm64'
+    jobs:
+      - 'docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'ccsdk/apps'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'ccsdk-apps-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
