--- a/jjb/demo/demo.yaml
+++ b/jjb/demo/demo.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'demo-settings'
     files: '**'
     archive-artifacts: ''
