Add arm64 docker build for clamp
Add arm64 docker-build job for clamp project:

Change-Id: I4595aebb6704f38a39411577819be426747c0009
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -37,6 +37,27 @@
     build-node: ubuntu1604-docker-8c-8g
 
 - project:
+    name: clamp-arm64
+    project-name: 'clamp-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DoSetVersion'
+         docker-pom: 'pom.xml'
+         mvn-profile: 'docker'
+         mvn-params: '-Dmaven.test.skip=true'
+         maven-properties: |
+          clamp.registry=$
+
+    project: 'clamp-arm64'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'clamp-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: clamp-sonar
     jobs:
       - gerrit-maven-sonar:
