Add arm64 docker build for dcaegen2
Add arm64 docker-build job for dcaegen2 project

Change-Id: I11aafff6fe38f01bd698ebf78c3543190d6327cd
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -25,6 +25,27 @@
           build-node: 'ubuntu1604-docker-8c-8g'
 
 - project:
+    name: dcaegen2-analytics-tca-gen2-arm64
+    # job template iterators
+    project-name: 'dcaegen2-analytics-tca-gen2-arm64'
+    stream:
+      - 'master':
+          branch: 'master'
+    # apply to all jobs
+    project: 'dcaegen2/analytics/tca-gen2'
+    mvn-settings: 'dcaegen2-analytics-tca-gen2-settings'
+    files: '**'
+    maven-deploy-properties: |
+      deployAtEnd=true
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-shell-daily':
+          mvn-goals: 'clean deploy docker:build -DpushImage'
+          # No-op
+          script: '/bin/true'
+
+-- project:
     name: dcaegen2-analytics-tca-gen2-sonar
     jobs:
       - gerrit-maven-sonar
