--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -26,6 +26,28 @@
     archive-artifacts: ''
 
 - project:
+    name: dmaap-datarouter-arm64
+    project-name: 'dmaap-datarouter-arm64'
+    jobs:
+      #
+      # see DMAAP-334 for more details, but
+      #     - '{project-name}-{stream}-docker-java-daily':
+      # doesn't support mvn-goals override, so trying this...
+      - '{project-name}-{stream}-docker-java-shell-daily':
+          mvn-goals: 'clean package -P docker docker:build -DpushImage'
+          # No-op
+          script: '/bin/true'
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
+
+    project: 'dmaap/datarouter'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'dmaap-datarouter-settings'
+    files: '**'
+    archive-artifacts: ''
+
+-- project:
     name: dmaap-datarouter-sonar
     jobs:
       - gerrit-maven-sonar
