--- a/jjb/dmaap/dmaap-messagerouter-docker.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-docker.yaml
@@ -20,6 +20,25 @@
     build-node: ubuntu1604-docker-8c-8g
 
 - project:
+    name: dmaap-messagerouter-docker-arm64
+    project-name: 'dmaap-messagerouter-docker-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'dmaap/messagerouter/messageservice'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'dmaap-messagerouter-messageservice-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: 'docker'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: dmaap-messagerouter-docker-clm
     jobs:
       - gerrit-maven-clm
