Add arm64 docker build for holmes
Add arm64 docker-build job for holmes project:

Change-Id: I6ef5076a437a27b0e044bdb5674660b95427f560
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/holmes/holmes-csit.yaml
+++ b/jjb/holmes/holmes-csit.yaml
@@ -8,6 +8,8 @@
     stream: 'master'
     functionality:
       - 'sanity-check':
-          trigger_jobs: 'holmes-rule-management-master-docker-java-daily'
+          trigger_jobs: 
+            - 'holmes-rule-management-master-docker-java-daily'
+            - 'holmes-rule-management-arm64-master-docker-java-daily'
     robot-options: ''
     branch: 'master'
