--- a/jjb/holmes/holmes-dsa.yaml
+++ b/jjb/holmes/holmes-dsa.yaml
@@ -21,6 +21,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: holmes-dsa-arm64
+    project-name: 'holmes-dsa-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+
+    project: 'holmes/dsa'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'holmes-dsa-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: holmes-dsa-sonar
     jobs:
       - gerrit-maven-sonar
