Add arm64 docker build for logging-analytics
Add arm64 docker-build job for logging-analytics project:

Change-Id: I990f8a10f24ca1f42df7db465b05e031518b0808
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/logging-analytics/logging-analytics.yaml
+++ b/jjb/logging-analytics/logging-analytics.yaml
@@ -28,6 +28,25 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: logging-analytics-arm64
+    project-name: 'logging-analytics-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'logging-analytics'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
+    mvn-settings: 'logging-analytics-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: logging-analytics-sonar
     jobs:
       - gerrit-maven-sonar
