--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
@@ -25,6 +25,25 @@
     maven-version: 'mvn35'
 
 - project:
+    name: logging-analytics-pomba-pomba-arm64-aai-context-builder
+    project-name: logging-analytics-pomba-pomba-arm64-aai-context-builder
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: logging-analytics/pomba/pomba-aai-context-builder
+    stream:
+      - 'master':
+          branch: 'master'
+
+    mvn-settings: logging-analytics-pomba-pomba-aai-context-builder-settings
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    maven-version: 'mvn35'
+
+-- project:
     name: logging-analytics-pomba-pomba-aai-context-builder-sonar
     jobs:
       - gerrit-maven-sonar
